--- a/index.html
+++ b/index.html
@@ -876,7 +876,7 @@
         </div>
 
         <div class="section__foot">
-          <a class="btn btn--primary" href="#lead">Receber opções pelo WhatsApp</a>
+          <a class="btn btn--primary" href="https://api.whatsapp.com/send?phone=5519981611842&amp;text=Ol%C3%A1!%20Gostaria%20de%20um%20atendimento%20personalizado%20a%20respeito%20da%20campanha%20da%20curadoria%20do%20Cambu%C3%AD.">Receber opções pelo WhatsApp</a>
           <a class="btn btn--ghost" href="#como-funciona">Entender como funciona</a>
         </div>
       </div>
